K8S-Files/myapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
  labels:
    app: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: myapp-deployement
        image: prntxt/my-app:1.0
        
        ports: 
        - containerPort: 3000
