K8S-Files/db-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: db-ingress
  namespace : default
spec:
  rules:
    - host: mydb.com
      -  http:
          paths:
            - path: /
              backend:
                service :
                  name: mongo-express-service
                  port:
                    number: 8081
