K8S-Files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: app.com
      http:
        paths:
          - path: /
            backend:
              service :
                name: mongo-express-service
                port: 
                  number: 8081
